--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <html>
-<head>
+ <head>
 <title>
  李素尧的青少年活动中心培训成果展示
 </title>
-</head>
-<body>
-爸爸妈妈我爱你
-</body>
+ </head>
+ <body>
+  Boom!
+   <div id='image-1-container'>
+    < img id='image-1'
+    src='http://pic3.nipic.com/20090714/1706891_083011009_2.jpg'/>
+    <div class=image-1-hint-best>
+       This is lovely dog！
+     </div>
+   </div>
+ </body>
+ <style>    
+ #image-1-container {
+   position:relative;
+   width:560px;
+   height:280px;
+   border:solid 1px blue;
+ }
+
+ #image-1 {
+   position:absolut;
+   top:0px;
+   left:0px;
+   width:100%;
+   height:100%;
+   object-fit:cover;
+   border:solid 1px red;
+ }
+ 
+ .image-1-hint-best {
+   position:absolute;
+   width:100%;
+   height:100%;
+   top:0px;
+   left:0px;
+   text-align:center;
+   vertical-align:middle;
+   line-height:280px;
+   border:solid 1px green;
+   color:green;
+ }
+
+ body {
+   font-size:18px;
+   color:red;
+   font-weight:300;
+ }
+ </style>
 </html>
