--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
+
  <head>
-<title>
- 李素尧的青少年活动中心培训成果展示
-</title>
+
  </head>
+
  <body>
   Boom!
-   <div id="image-1-container">
-    < img id="image-1"src="http://pic3.nipic.com/20090714/1706891_083011009_2.jpg"/>
-    <div class="image-1-hint-best">
+   <div id='image-1-container'>
+    <img id='image-1'
+    src='./resources/dog.jpg'/>
+    <div class=image-1-hint-best>
        This is lovely dog！
      </div>
    </div>
