--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   Boom!
    <div id='image-1-container'>
     <img id='image-1'
-    src='./resources/dog.jpg'/>
+    src='http://pic3.nipic.com/20090714/1706891_083011009_2.jpg'/>
     <div class=image-1-hint-best>
        This is lovely dog！
      </div>
