--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
 
  <head>
-
+  <title>
+  李素尧——青少年活动中心的成功展示
+  </title>
  </head>
-
  <body>
-  Boom!
    <div id='image-1-container'>
     <img id='image-1'
     src='http://pic3.nipic.com/20090714/1706891_083011009_2.jpg'/>
     <div class=image-1-hint-best>
-       This is lovely dog！
+       爸爸妈妈辛苦了
      </div>
    </div>
  </body>
