--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img id='image-1'
     src='http://pic3.nipic.com/20090714/1706891_083011009_2.jpg'/>
     <div class=image-1-hint-best>
-       爸爸妈妈辛苦了
+       爸爸妈妈辛苦了吗？
      </div>
    </div>
  </body>
