--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
  <style>    
  #image-1-container {
    position:relative;
-   width:560px;
-   height:280px;
+   width:'100%';
+   height: '100%';
    border:solid 1px blue;
  }
 
