--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
  <head>
+  <meta name='viewport' content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width'>
+
   <title>
   李素尧——青少年活动中心的作业展示
   </title>
@@ -16,8 +18,8 @@
  <style>    
  #image-1-container {
    position:relative;
-   width:560px;
-   height:280px;
+   width: '100%';
+   height: '100%';
    border:solid 1px blue;
  }
 
