--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta name='viewport' content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width'>
 
   <title>
-  李素尧——青少年活动中心的作业展示
+  李素尧——青少年活动中心的作业展示嘿嘿
   </title>
  </head>
  <body>
