--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
    <div id='image-1-container'>
     <img id='image-1'
-    src='http://pic3.nipic.com/20090714/1706891_083011009_2.jpg'/>
+    src='http://img.hb.aicdn.com/2917f25ad042568baec4833ac2bcd4adbc920f624a5bd-b0vOTs_fw658'/>
     <div class=image-1-hint-best>
        爸爸妈妈辛苦了
      </div>
